--- a/bungee/src/main/resources/bungee.yml
+++ b/bungee/src/main/resources/bungee.yml
@@ -1,4 +1,4 @@
 name: gmcbm
-version: ${project.version}
+version: ${ci.build.version}
 main: net.gmcbm.bungee.Main
 description: ${project.description}
